welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:3: error: '<-' expected but ')' found.
	for ( i< 0 to nums.length) {
                                 ^averageValue:9: error: illegal start of simple expression
}
^